# chongshiwenku

./: .gitignore  README.md
backend/: .env.example  README.md  dev.db  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  auth.py  documents.py  groups.py  health.py  me.py
backend/app/core/: __init__.py  business_rules.py  config.py  security.py  startup.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  access_passcode.py  acl_entry.py  ai_provider_config.py  base.py  coin_ledger.py  document.py  document_asset.py  document_coin_record.py  document_like.py  document_version.py  enums.py  group.py  group_member.py  user.py  user_checkin.py  user_coin_account.py
backend/app/schemas/: __init__.py  admin.py  auth.py  coins.py  documents.py  groups.py
backend/app/services/: __init__.py  ai.py  auth.py  coins.py  documents.py  groups.py
backend/tests/: conftest.py  test_auth_and_coins.py  test_documents.py  test_groups.py  test_health.py
docs/: architecture.md  database-design.md  requirements.md
frontend/: README.md  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tsconfig.json  tsconfig.tsbuildinfo  uno.config.ts  unocss-postcss-plugin.cjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/assets/: README.md
frontend/components/: app-providers.tsx  coin-center.tsx  home-page.tsx  site-chrome.tsx  site-home-page.tsx  (+1 more)
infra/: README.md  docker-compose.dev.yml
(+27 files in other folders)
