[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "chongshiwenku-backend"
version = "0.1.0"
description = "崇实文库后端服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4,<6.0",
  "fastapi>=0.115,<1.0",
  "PyJWT>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.2,<6.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
